Added svg sprite

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -14,75 +14,82 @@
 <body>
 
   <header class="header">
-    <div class="header__wrapper wrapper container">
+    <div class="header__wrapper container">
       <nav class="navigation header-navigation ">
-        <a href="#" class="site-logo navigation-logo">
-          <img class="site-logo__img" src="#" alt="brand and company name">
+        <a href="#" class="logo navigation__logo">
+          <img class="logo__img" src="./images/logo.png" alt="brand and company name">
         </a>
-        <ul class="meny navigation--list">
+        <div class="burger navigation__burger">
+          <div class="burger__block"></div>
+        </div>
+        <ul class="menu navigation--list">
           <li class="menu__item">
-            <a class="menu__link" href="#">Text</a>
+            <a class="menu__link" href="#">Программа обучения</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Text</a>
+            <a class="menu__link" href="#">о нас</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Text</a>
+            <a class="menu__link" href="#">варианты обучения</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Text</a>
+            <a class="menu__link" href="#">контакты</a>
           </li>
           <li class="menu__item">
-            <button class="menu__button" href="#">Text</button>
+            <button class="menu__button" href="#">консультация по телефону</button>
           </li>
         </ul>
       </nav>
+
+      <section class="section-training header__section-training">
+        <div class="section-training__wrapper">
+          <div class="section-training__content">
+            <h2 class="title section-training__title">Комплексная подготовка к ВНО по английскому языку</h2>
+            <span class="section-training__slogan">Просто не будет.</span>
+            <p class="section-training__text">Но ты гарантировано наберешь</p>
+            <span class="section-training__point">+25 баллов</span>
+            <button class="button section-training__button">хочу на бесплатное занятие</button>
+          </div>
+          <div class="section-training__img">
+            <img class="img" src="./images/train-01.png" alt="" srcset="">
+          </div>
+        </div>
+      </section>
     </div>
   </header>
 
 
   <main class="main">
     <div class="wrapper main--wrapper">
-      <h1 class="main-title">Text</h1>
+      <h1 class="main-title visually-hidde n">Text</h1>
+
 
       <section class="section-training main__section-training">
-        <div class="section-training__wrapper">
-          <div class="section-training__content">
-            <h2 class="title section-training__title">Text</h2>
-            <span class="section-training__text">Text</span>
-            <p class="section-training__text-number">Text+25</p>
-            <button class="button section-training__button">text</button>
-          </div>
-          <div class="section-training__img">
-            <img class="img" src="#" alt="" srcset="">
-          </div>
-        </div>
-
         <div class="section-training__icons">
           <ul class="menu-icons">
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
-                <svg class="icon menu-icons__icon" width="20px" height="20px">
+                <svg class="icon menu-icons__icon" width="58px" height="58px">
                   <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
                 </svg>
               </a>
-              <p class="menu-icons__description">Text</p>
+              <p class="menu-icons__description">Адаптированная авторская программа ВНО</p>
             </li>
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
-                <svg class="icon menu-icons__icon" width="20px" height="20px">
+                <svg class="icon menu-icons__icon" width="58px" height="58px">
                   <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
                 </svg>
               </a>
-              <p class="menu-icons__description">Text</p>
+              <p class="menu-icons__description">Современные методики обучения</p>
             </li>
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
-                <svg class="icon menu-icons__icon" width="20px" height="20px">
+                <svg class="icon menu-icons__icon" width="58px" height="58px">
                   <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
                 </svg>
               </a>
-              <p class="menu-icons__description">Text</p>
+              <p class="menu-icons__description">Финансовая гарантия результата</p>
             </li>
           </ul>
         </div>
@@ -227,7 +234,7 @@
           <h2 class="section-teacher__title">Text</h2>
           <div class="card section-teacher__card">
             <div class="card__img">
-              <img src="" alt="" class="img">
+              <img src="#" alt="" class="img">
             </div>
             <div class="card__content">
               <h3 class="card__title">Text</h3>
@@ -286,37 +293,37 @@
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
             <li class="slider__item">
               <a href="" class="section-slider__link">
-                <img class="img" src="" alt="">
+                <img class="img" src="#" alt="">
               </a>
             </li>
           </ul>
@@ -332,7 +339,8 @@
           <h2 class="section-form__title">Text</h2>
           <p class="section-form__description">Text</p>
           <input class="section-form__input" type="text" name="name" placeholder="Имя*" minlength="4" maxlength="40"
-            autocomplete="name" autofocus required>
+            autocomplete="name" required>
+          <!-- autofocus -->
           <input class="section-form__input" type="tel" name="tel" placeholder="Телефон*" minlength="4" maxlength="40"
             autocomplete="tel" required>
           <button class="section-form__button">Text</button>
