--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -15,7 +15,7 @@
 
   <header class="header">
     <div class="header__wrapper container">
-      <nav class="navigation header-navigation ">
+      <nav class="navigation header__navigation ">
         <a href="#" class="logo navigation__logo">
           <img class="logo__img" src="./images/logo.png" alt="brand and company name">
         </a>
@@ -42,13 +42,13 @@
       </nav>
 
       <section class="section-training header__section-training">
-        <div class="section-training__wrapper">
+        <div class="section-training__wrapper wrapper">
           <div class="section-training__content">
-            <h2 class="title section-training__title">Комплексная подготовка к ВНО по английскому языку</h2>
-            <span class="section-training__slogan">Просто не будет.</span>
-            <p class="section-training__text">Но ты гарантировано наберешь</p>
-            <span class="section-training__point">+25 баллов</span>
-            <button class="button section-training__button">хочу на бесплатное занятие</button>
+            <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br/> по английскому языку</h2>
+            <!-- <span class="section-training__slogan"></span> -->
+            <p class="section-training__slogan typographic-mb">Просто не будет. <br/> Но ты гарантировано наберешь</p>
+            <span class="section-training__point typographic-mb">+25 баллов</span>
+            <button class="button button--light section-training__button typographic-tb">хочу на бесплатное занятие</button>
           </div>
           <div class="section-training__img">
             <img class="img" src="./images/train-01.png" alt="" srcset="">
