Header is ready

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -44,11 +44,11 @@
       <section class="section-training header__section-training">
         <div class="section-training__wrapper wrapper">
           <div class="section-training__content">
-            <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br/> по английскому языку</h2>
-            <!-- <span class="section-training__slogan"></span> -->
-            <p class="section-training__slogan typographic-mb">Просто не будет. <br/> Но ты гарантировано наберешь</p>
+            <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br /> по английскому языку</h2>
+            <p class="section-training__slogan typographic-mb">Просто не будет. <br /> Но ты гарантировано наберешь</p>
             <span class="section-training__point typographic-mb">+25 баллов</span>
-            <button class="button button--light section-training__button typographic-tb">хочу на бесплатное занятие</button>
+            <button class="button button--light section-training__button typographic-tb" type="button">хочу на
+              бесплатное занятие</button>
           </div>
           <div class="section-training__img">
             <img class="img" src="./images/train-01.png" alt="" srcset="">
