--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -44,7 +44,8 @@
       <section class="section-training header__section-training">
         <div class="section-training__wrapper wrapper">
           <div class="section-training__content">
-            <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br /> по английскому языку</h2>
+            <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br /> по английскому
+              языку</h2>
             <p class="section-training__slogan typographic-mb">Просто не будет. <br /> Но ты гарантировано наберешь</p>
             <span class="section-training__point typographic-mb">+25 баллов</span>
             <button class="button button--light section-training__button typographic-tb" type="button">хочу на
@@ -60,33 +61,33 @@
 
 
   <main class="main">
-    <div class="wrapper main--wrapper">
-      <h1 class="main-title visually-hidde n">Text</h1>
+    <div class="wrapper main--wrapper container">
+      <h1 class="main-title visually-hidden">Комплексное изучение английского языка</h1>
 
 
-      <section class="section-training main__section-training">
-        <div class="section-training__icons">
+      <section class="section-icons main__section-icons">
+        <div class="section-icons__wrapper">
           <ul class="menu-icons">
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
-                <svg class="icon menu-icons__icon" width="58px" height="58px">
-                  <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+                <svg class="icon menu-icons__icon">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-female_student"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Адаптированная авторская программа ВНО</p>
             </li>
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
-                <svg class="icon menu-icons__icon" width="58px" height="58px">
-                  <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+                <svg class="icon menu-icons__icon">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-mobile_learning"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Современные методики обучения</p>
             </li>
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
-                <svg class="icon menu-icons__icon" width="58px" height="58px">
-                  <!-- <use href="./images/sprite/symbol-defs.svg#icon-basket"></use> -->
+                <svg class="icon menu-icons__icon">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-insurance"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Финансовая гарантия результата</p>
@@ -95,33 +96,34 @@
         </div>
       </section>
 
-      <section class="section-help">
-        <div class="section-help__wrapper">
-          <h2 class="section-help__title">Text</h2>
-          <ul class="items section-help__items">
-            <li class="section-help__item">
-              <p class="section-help__text">Text</p>
-              <!-- <a href="" class="section-help__link">1</a> -->
+      <section class="section-problem">
+        <div class="section-problem__wrapper">
+          <h2 class="section-problem__title">Главные проблемы учеников
+            на English ВНО, которые мы помогаем решить</h2>
+          <ul class="menu-problem section-problem__menu-problem items">
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Незнание грамматики</p>
+              <!-- <a href="" class="menu-problem__link">1</a> -->
             </li>
-            <li class="section-help__item">
-              <p class="section-help__text">Text</p>
-              <!-- <a href="" class="section-help__link">2</a> -->
+            <li class="section-problem__item">
+              <p class="section-problem__text">Text</p>
+              <!-- <a href="" class="section-problem__link">2</a> -->
             </li>
-            <li class="section-help__item">
-              <p class="section-help__text">Text</p>
-              <!-- <a href="" class="section-help__link">3</a> -->
+            <li class="section-problem__item">
+              <p class="section-problem__text">Text</p>
+              <!-- <a href="" class="section-problem__link">3</a> -->
             </li>
-            <li class="section-help__item">
-              <p class="section-help__text">Text</p>
-              <!-- <a href="" class="section-help__link">4</a> -->
+            <li class="section-problem__item">
+              <p class="section-problem__text">Text</p>
+              <!-- <a href="" class="section-problem__link">4</a> -->
             </li>
-            <li class="section-help__item">
-              <p class="section-help__text">Text</p>
-              <!-- <a href="" class="section-help__link">5</a> -->
+            <li class="section-problem__item">
+              <p class="section-problem__text">Text</p>
+              <!-- <a href="" class="section-problem__link">5</a> -->
             </li>
-            <li class="section-help__item">
-              <p class="section-help__text">Text</p>
-              <!-- <a href="" class="section-help__link">6</a> -->
+            <li class="section-problem__item">
+              <p class="section-problem__text">Text</p>
+              <!-- <a href="" class="section-problem__link">6</a> -->
             </li>
           </ul>
         </div>
