--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -56,16 +56,8 @@
           </div>
         </div>
       </section>
-    </div>
-  </header>
 
-
-  <main class="main">
-    <div class="wrapper main--wrapper container">
-      <h1 class="main-title visually-hidden">Комплексное изучение английского языка</h1>
-
-
-      <section class="section-icons main__section-icons">
+      <section class="section-icons header__section-icons">
         <div class="section-icons__wrapper">
           <ul class="menu-icons">
             <li class="item menu-icons__item">
@@ -96,35 +88,39 @@
         </div>
       </section>
 
-      <section class="section-problem">
+
+    </div>
+  </header>
+
+
+  <main class="main">
+    <div class="wrapper main--wrapper container">
+      <h1 class="main-title visually-hidden">Комплексное изучение английского языка</h1>
+
+      <section class="section-problem container">
         <div class="section-problem__wrapper">
-          <h2 class="section-problem__title">Главные проблемы учеников
+          <h2 class="section-problem__title typographic-mb">Главные проблемы учеников <br />
             на English ВНО, которые мы помогаем решить</h2>
           <ul class="menu-problem section-problem__menu-problem items">
             <li class="menu-problem__item">
               <p class="menu-problem__text">Незнание грамматики</p>
-              <!-- <a href="" class="menu-problem__link">1</a> -->
             </li>
-            <li class="section-problem__item">
-              <p class="section-problem__text">Text</p>
-              <!-- <a href="" class="section-problem__link">2</a> -->
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Неумение воспринимать устную английскую речь</p>
             </li>
-            <li class="section-problem__item">
-              <p class="section-problem__text">Text</p>
-              <!-- <a href="" class="section-problem__link">3</a> -->
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Скупой словарный запас <br /> для написания сочинения</p>
             </li>
-            <li class="section-problem__item">
-              <p class="section-problem__text">Text</p>
-              <!-- <a href="" class="section-problem__link">4</a> -->
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Подготовка в одиночку</p>
             </li>
-            <li class="section-problem__item">
-              <p class="section-problem__text">Text</p>
-              <!-- <a href="" class="section-problem__link">5</a> -->
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Отсутствие единого <br /> ресурса знаний</p>
             </li>
-            <li class="section-problem__item">
-              <p class="section-problem__text">Text</p>
-              <!-- <a href="" class="section-problem__link">6</a> -->
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Недостаток самоорганизации и лень</p>
             </li>
+
           </ul>
         </div>
       </section>
