--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -100,7 +100,7 @@
       <section class="section-problem container">
         <div class="section-problem__wrapper">
           <h2 class="section-problem__title typographic-mb">Главные проблемы учеников <br />
-            на English ВНО, которые мы помогаем решить</h2>
+            на English ВНО, которые мы <span class="section-problem__colortext">помогаем</span> решить</h2>
           <ul class="menu-problem section-problem__menu-problem items">
             <li class="menu-problem__item">
               <p class="menu-problem__text">Незнание грамматики</p>
@@ -127,35 +127,45 @@
 
       <section class="section-action">
         <div class="section-action__wrapper">
-          <h2 class="section-action__title">Text</h2>
-          <ul class="items section-action__items">
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+          <h2 class="section-action__title typographic-mb">Как мы это делаем</h2>
+          <ul class="actions section-action__items items">
+            <li class="actions__item actions__item--study">
+              <a href="#" class="link actions__link">
+                <svg class="icon actions__icon">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-study_program"></use>
+                </svg>
+                <h3 class="actions__title typographic-mb">Адаптированная программа подготовки к ВНО</h3>
+                <p class="actions__text typographic-mr">Ты будешь изучать грамматику
+                  и лексику одновременно.
+                  И ты научишься писать сочинения.</p>
+              </a>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="action__item action__item--mobile">
+              <h3 class="action__title">Аудиторное
+                и онлайн-обучение</h3>
+              <p class="action__text">Учитель поможет не только
+                в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате при желании.</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="action__item action__item--open_book">
+              <h3 class="action__title">Привычка читать
+                на английском языке</h3>
+              <p class="action__text">Статьи из источников, которые используются при разработке настоящего ВНО, будут
+                приходить на телефон дважды в неделю.</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="action__item action__item--communication">
+              <h3 class="action__title">Психологическая поддержка</h3>
+              <p class="action__text">Мы научим тебя методикам прохождения тестирований, умению планировать свою
+                подготовку уверенности в себе</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="action__item action__item--female">
+              <h3 class="action__title">Обучение по автроским пособиям</h3>
+              <p class="action__text">Тебе не нужно тратить время на самостоятельный поиск материала и ничего покупать
+                дополнительно. Мы составили 2 пособия для тебя.</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
-            </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="action__item action__item--audio_book">
+              <h3 class="action__title">Умение воспринивать устную английскую речь</h3>
+              <p class="action__text">“F.R.I.E.N.D.S” тебе не помогут.
+                Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с изучаемой лексикой.</p>
             </li>
           </ul>
         </div>
