--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -132,7 +132,7 @@
             <li class="actions__item actions__item--study">
               <a href="#" class="link actions__link">
                 <svg class="icon actions__icon">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-study_program"></use>
+                  <use href="./images/icons-svg/icon-study.svg"></use>
                 </svg>
                 <h3 class="actions__title typographic-mb">Адаптированная программа подготовки к ВНО</h3>
                 <p class="actions__text typographic-mr">Ты будешь изучать грамматику
