--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -63,7 +63,7 @@
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
                 <svg class="icon menu-icons__icon">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-female_student"></use>
+                  <use width="107%" height="129%" href="./images/icons-svg/symbol-defs.svg#icon-female"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Адаптированная авторская программа ВНО</p>
@@ -71,7 +71,7 @@
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
                 <svg class="icon menu-icons__icon">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-mobile_learning"></use>
+                  <use width="106%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-mobile-learning"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Современные методики обучения</p>
@@ -79,7 +79,7 @@
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
                 <svg class="icon menu-icons__icon">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-insurance"></use>
+                  <use width="106%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-insurance"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Финансовая гарантия результата</p>
@@ -128,44 +128,72 @@
       <section class="section-action">
         <div class="section-action__wrapper">
           <h2 class="section-action__title typographic-mb">Как мы это делаем</h2>
-          <ul class="actions section-action__items items">
-            <li class="actions__item actions__item--study">
-              <a href="#" class="link actions__link">
-                <svg class="icon actions__icon">
-                  <use href="./images/icons-svg/icon-study.svg"></use>
+          <ul class="menu-actions section-action__items items">
+            <li class="menu-actions__item">
+              <a href="#" class="link menu-actions__link">
+                <svg class="icon menu-actions__icon">
+                  <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-study"></use>
                 </svg>
-                <h3 class="actions__title typographic-mb">Адаптированная программа подготовки к ВНО</h3>
-                <p class="actions__text typographic-mr">Ты будешь изучать грамматику
-                  и лексику одновременно.
+                <h3 class="menu-actions__title typographic-mb">Адаптированная программа подготовки к ВНО</h3>
+                <p class="menu-actions__text typographic-mr">Ты будешь изучать грамматику<br />
+                  и лексику одновременно. <br />
                   И ты научишься писать сочинения.</p>
               </a>
             </li>
-            <li class="action__item action__item--mobile">
-              <h3 class="action__title">Аудиторное
-                и онлайн-обучение</h3>
-              <p class="action__text">Учитель поможет не только
-                в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате при желании.</p>
+            <li class="menu-actions__item">
+              <a href="#" class="link menu-actions__link">
+                <svg class="icon menu-actions__icon">
+                  <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-mobile-learning"></use>
+                </svg>
+                <h3 class="menu-actions__title typographic-mb">Аудиторное
+                  и онлайн-обучение</h3>
+                <p class="menu-actions__text typographic-mr">Учитель поможет не только
+                  в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате при желании.</p>
+              </a>
             </li>
-            <li class="action__item action__item--open_book">
-              <h3 class="action__title">Привычка читать
-                на английском языке</h3>
-              <p class="action__text">Статьи из источников, которые используются при разработке настоящего ВНО, будут
-                приходить на телефон дважды в неделю.</p>
+            <li class="menu-actions__item">
+              <a href="#" class="link menu-actions__link">
+                <svg class="icon menu-actions__icon">
+                  <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-open-book"></use>
+                </svg>
+                <h3 class="menu-actions__title typographic-mb">Привычка читать
+                  на английском языке</h3>
+                <p class="menu-actions__text typographic-mr">Статьи из источников, которые используются при разработке
+                  настоящего ВНО, будут
+                  приходить на телефон дважды в неделю.</p>
+              </a>
             </li>
-            <li class="action__item action__item--communication">
-              <h3 class="action__title">Психологическая поддержка</h3>
-              <p class="action__text">Мы научим тебя методикам прохождения тестирований, умению планировать свою
-                подготовку уверенности в себе</p>
+            <li class="menu-actions__item">
+              <a href="#" class="link menu-actions__link">
+                <svg class="icon menu-actions__icon">
+                  <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-communication"></use>
+                </svg>
+                <h3 class="menu-actions__title typographic-mb">Психологическая поддержка</h3>
+                <p class="menu-actions__text typographic-mr">Мы научим тебя методикам прохождения тестирований, умению
+                  планировать свою
+                  подготовку уверенности в себе</p>
+              </a>
             </li>
-            <li class="action__item action__item--female">
-              <h3 class="action__title">Обучение по автроским пособиям</h3>
-              <p class="action__text">Тебе не нужно тратить время на самостоятельный поиск материала и ничего покупать
-                дополнительно. Мы составили 2 пособия для тебя.</p>
+            <li class="menu-actions__item">
+              <a href="#" class="link menu-actions__link">
+                <svg class="icon menu-actions__icon">
+                  <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-female"></use>
+                </svg>
+                <h3 class="menu-actions__title typographic-mb">Обучение по автроским пособиям</h3>
+                <p class="menu-actions__text typographic-mr">Тебе не нужно тратить время на самостоятельный поиск
+                  материала и ничего покупать
+                  дополнительно. Мы составили 2 пособия для тебя.</p>
+              </a>
             </li>
-            <li class="action__item action__item--audio_book">
-              <h3 class="action__title">Умение воспринивать устную английскую речь</h3>
-              <p class="action__text">“F.R.I.E.N.D.S” тебе не помогут.
-                Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с изучаемой лексикой.</p>
+            <li class="menu-actions__item">
+              <a href="#" class="link menu-actions__link">
+                <svg class="icon menu-actions__icon">
+                  <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-audio-book"></use>
+                </svg>
+                <h3 class="menu-actions__title typographic-mb">Умение воспринивать устную английскую речь</h3>
+                <p class="menu-actions__text typographic-mr">“F.R.I.E.N.D.S” тебе не помогут.
+                  Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с изучаемой лексикой.</p>
+              </a>
             </li>
           </ul>
         </div>
@@ -173,35 +201,35 @@
 
       <section class="section-program">
         <div class="section-program__wrapper">
-          <h2 class="section-program__title">Text</h2>
-          <ul class="items section-program__items">
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+          <h2 class="section-program__title typographic-meb">Наша программа</h2>
+          <ul class="list-program section-program__list">
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
-            <li class="items__item">
-              <h3 class="items__title">Text</h3>
-              <p class="items__text">Text</p>
+            <li class="list-program__item">
+              <h3 class="list-program__title">Text</h3>
+              <p class="list-program__text">Text</p>
             </li>
           </ul>
           <div class="section-program__img">
