--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -201,40 +201,71 @@
 
       <section class="section-program">
         <div class="section-program__wrapper">
-          <h2 class="section-program__title typographic-meb">Наша программа</h2>
+          <h2 class="section-program__title typographic-meb text-white">Наша программа</h2>
           <ul class="list-program section-program__list">
             <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
+              <div class="list-program__wrapper">
+                <span class="list-program__segment">Grammar</span>
+                <p class="list-program__text typographic-mr ">
+                  Nouns & Articles
+                  Adjectives & Adverb</p>
+                <span class="list-program__segment">Vocabulary</span>
+                <p class="list-program__text typographic-mr ">
+                  Family & Relations People & Society</p>
+              </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
+              <div class="list-program__wrapper">
+                <span class="list-program__segment">Grammar</span>
+                <p class="list-program__text typographic-mr ">
+                  Pronouns <br /> Active Voice <br /> Passive Voice</p>
+                <span class="list-program__segment">Vocabulary</span>
+                <p class="list-program__text typographic-mr ">
+                  Home <br /> School <br /> Worky</p>
+              </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
+              <div class="list-program__wrapper">
+                <span class="list-program__segment">Grammar</span>
+                <p class="list-program__text typographic-mr ">
+                  Modal verbs <br /> Infinitive <br /> Gerund <br /> Participle: 1, 2</p>
+                <span class="list-program__segment">Vocabulary</span>
+                <p class="list-program__text typographic-mr ">
+                  Travel & Tourism <br /> Culture & Free Time <br /> Sport</p>
+                <span class="list-program__segment">Writing</span>
+                <p class="list-program__text typographic-mr ">
+                  Informal Letter</p>
+              </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
+              <div class="list-program__wrapper">
+                <span class="list-program__segment">Grammar</span>
+                <p class="list-program__text typographic-mr ">
+                  Clauses: Conditional <br /> and Wishes <br /> Direct / Reported speech <br />
+                  Preposition <br /> Conjunction <br /> Numeral</p>
+                <span class="list-program__segment">Vocabulary</span>
+                <p class="list-program__text typographic-mr ">
+                  Healthy Living <br /> Nature & Environment <br /> Money</p>
+                <span class="list-program__segment">Writing</span>
+                <p class="list-program__text typographic-mr ">
+                  Formal Letter</p>
+              </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
-            </li>
-            <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
-            </li>
-            <li class="list-program__item">
-              <h3 class="list-program__title">Text</h3>
-              <p class="list-program__text">Text</p>
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
+              <div class="list-program__wrapper">
+                <span class="list-program__segment">
+                  <span class="list-program__hidden-element">Grammar</span></span>
+                <p class="list-program__text typographic-mr ">
+                  Revision <br /> Tests </p>
+              </div>
             </li>
           </ul>
-          <div class="section-program__img">
-            <img class="img" src="#" alt="" srcset="">
-          </div>
+          <div class="section-program__img"></div>
         </div>
       </section>
 
