--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -120,7 +120,6 @@
             <li class="menu-problem__item">
               <p class="menu-problem__text">Недостаток самоорганизации и лень</p>
             </li>
-
           </ul>
         </div>
       </section>
@@ -269,14 +268,42 @@
         </div>
       </section>
 
-      <section class="section-choice">
+      <section class="section-choosing container">
+        <div class="section-choosing__wrapper">
+          <h2 class="section-choosing__title typographic-mb">Почему нас выбирают</h2>
+          <ul class="menu-problem section-choosing__menu-problem items">
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Обучение в малых командах</p>
+            </li>
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Визуализированные конспекты</p>
+            </li>
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Каждое занятие имеет <br />цель и конкретный <br />результат </p>
+            </li>
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Реальные результаты преподавателя</p>
+            </li>
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Программа курса соответствует требованиям МОН Украины</p>
+            </li>
+            <li class="menu-problem__item">
+              <p class="menu-problem__text">Набор команд по уровням знаний</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+
+
+      <!-- <section class="section-choice">
         <div class="section-choice__wrapper">
           <h2 class="section-choice__title">Text</h2>
           <ul class="section-choice__items">
             <li class="section-choice__item">
-              <p class="section-choice__text">Text</p>
-              <!-- <a href="" class="section-help__link">1</a> -->
-            </li>
+              <p class="section-choice__text">Text</p> -->
+      <!-- <a href="" class="section-help__link">1</a> -->
+      <!-- </li>
             <li class="section-choice__item">
               <p class="section-choice__text">Text</p>
             </li>
@@ -294,30 +321,42 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+
 
       <section class="section-teacher">
         <div class="section-teacher__wrapper">
-          <h2 class="section-teacher__title">Text</h2>
+          <h2 class="section-teacher__title typographic-meb">Преподаватель</h2>
           <div class="card section-teacher__card">
             <div class="card__img">
-              <img src="#" alt="" class="img">
+              <img src="./images/teacher.png" alt="Елена Морева" class="img">
             </div>
             <div class="card__content">
-              <h3 class="card__title">Text</h3>
+              <h3 class="card__title typographic-meb">Елена Морева</h3>
               <ul class="card__items">
                 <li class="card__item">
-                  <p class="card__description">Text</p>
+                  <p class="card__description typographic-msb">Опыт подготовки учеников<br />
+                    к ВНО - 6 лет</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description">Text</p>
+                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
+                    подряд</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description">Text</p>
+                  <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
+                    PET (Preliminary English Test)</p>
                 </li>
               </ul>
-              <p class="card__text">Text</p>
-              <a href="#" class="card_link">Text</a>
+              <p class="card__text typographic-mr">Высшее образование получила в Институте международных отношений НАУ по специальности
+                переводчик - аналитик.<br /><br />В свободное время проходит курсы от лучших университетов мира по
+                эффективному
+                преподаванию и методикам написания сочинений.<br /><br />В числе пройденных: English Grammar <br />and
+                Essay&shy Writing (Berkeley), English
+                Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
+                Business
+                Writing (Berkeley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching and Learning
+                (University of Houston).</p>
+              <a href="#" class="card__link">Cambrige English Entry Level Certificate</a>
             </div>
           </div>
         </div>
