--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -63,7 +63,8 @@
             <li class="item menu-icons__item">
               <a href="#" class="link menu-icons__link">
                 <svg class="icon menu-icons__icon">
-                  <use width="107%" height="129%" href="./images/icons-svg/symbol-defs.svg#icon-female"></use>
+                  <!-- <use width="107%" height="129%" href="./images/icons-svg/symbol-defs.svg#icon-female"></use> -->
+                  <use width="107%" height="129%" href="./images/icons-svg/symbol-defs.svg#icon-check"></use>
                 </svg>
               </a>
               <p class="menu-icons__description">Адаптированная авторская программа ВНО</p>
@@ -100,7 +101,8 @@
       <section class="section-problem container">
         <div class="section-problem__wrapper">
           <h2 class="section-problem__title typographic-mb">Главные проблемы учеников <br />
-            на English ВНО, которые мы <span class="section-problem__colortext">помогаем</span> решить</h2>
+            на English ВНО, которые мы
+            <span class="section-problem__title section-problem__title--colortext">помогаем</span> решить</h2>
           <ul class="menu-problem section-problem__menu-problem items">
             <li class="menu-problem__item">
               <p class="menu-problem__text">Незнание грамматики</p>
@@ -294,36 +296,6 @@
         </div>
       </section>
 
-
-
-      <!-- <section class="section-choice">
-        <div class="section-choice__wrapper">
-          <h2 class="section-choice__title">Text</h2>
-          <ul class="section-choice__items">
-            <li class="section-choice__item">
-              <p class="section-choice__text">Text</p> -->
-      <!-- <a href="" class="section-help__link">1</a> -->
-      <!-- </li>
-            <li class="section-choice__item">
-              <p class="section-choice__text">Text</p>
-            </li>
-            <li class="section-choice__item">
-              <p class="section-choice__text">Text</p>
-            </li>
-            <li class="section-choice__item">
-              <p class="section-choice__text">Text</p>
-            </li>
-            <li class="section-choice__item">
-              <p class="section-choice__text">Text</p>
-            </li>
-            <li class="section-choice__item">
-              <p class="section-choice__text">Text</p>
-            </li>
-          </ul>
-        </div>
-      </section> -->
-
-
       <section class="section-teacher">
         <div class="section-teacher__wrapper">
           <h2 class="section-teacher__title typographic-meb">Преподаватель</h2>
@@ -331,53 +303,60 @@
             <div class="card__img">
               <img src="./images/teacher.png" alt="Елена Морева" class="img">
             </div>
-            <div class="card__content">
-              <h3 class="card__title typographic-meb">Елена Морева</h3>
-              <ul class="card__items">
-                <li class="card__item">
-                  <p class="card__description typographic-msb">Опыт подготовки учеников<br />
-                    к ВНО - 6 лет</p>
-                </li>
-                <li class="card__item">
-                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
-                    подряд</p>
-                </li>
-                <li class="card__item">
-                  <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
-                    PET (Preliminary English Test)</p>
-                </li>
-              </ul>
-              <p class="card__text typographic-mr">Высшее образование получила в Институте международных отношений НАУ по специальности
-                переводчик - аналитик.<br /><br />В свободное время проходит курсы от лучших университетов мира по
-                эффективному
-                преподаванию и методикам написания сочинений.<br /><br />В числе пройденных: English Grammar <br />and
-                Essay&shy Writing (Berkeley), English
-                Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
-                Business
-                Writing (Berkeley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching and Learning
-                (University of Houston).</p>
-              <a href="#" class="card__link">Cambrige English Entry Level Certificate</a>
-            </div>
+            <h3 class="card__title typographic-meb">Елена Морева</h3>
+            <ul class="card__items">
+              <li class="card__item">
+                <p class="card__description typographic-msb">Опыт подготовки учеников<br />
+                  к ВНО - 6 лет</p>
+              </li>
+              <li class="card__item">
+                <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
+                  подряд</p>
+              </li>
+              <li class="card__item">
+                <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
+                  PET (Preliminary English Test)</p>
+              </li>
+            </ul>
+            <p class="card__text typographic-mr">Высшее образование получила в Институте международных отношений НАУ по
+              специальности
+              переводчик - аналитик.<br /><br />В свободное время проходит курсы от лучших университетов мира по
+              эффективному
+              преподаванию и методикам написания сочинений.<br /><br />В числе пройденных: English Grammar <br />and
+              Essay&shy Writing (Berkeley), English
+              Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
+              Business
+              Writing (Berkeley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching and Learning
+              (University of Houston).</p>
+            <a href="#" class="card__link typographic-mr">Cambrige English Entry Level Certificate</a>
           </div>
         </div>
       </section>
 
+
       <section class="section-warranty">
         <div class="section-warranty__wrapper">
-          <h2 class="section-warranty__title"></h2>
-          <ul class="section-warranty_items">
-            <li class="section-warranty__item">
-              <p class="section-warranty__text">Text</p>
+          <h2 class="section-warranty__title typographic-meb">Мы гарантируем</h2>
+          <ul class="list-warranty section-warranty__items">
+            <li class="list-warranty__item">
+              <p class="list-warranty__text typographic-mm">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом
+                пробном тестировании. Иначе мы вернем деньги.<span
+                  class="list-warranty__text typographic-mm list-warranty__text--colortext">*</span></p>
             </li>
-            <li class="section-warranty__item">
-              <p class="section-warranty__text">Text</p>
-              <span class="section-warranty">Text</span>
+            <li class="list-warranty__item">
+              <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из 14.
+                <span class="list-warranty__text typographic-mm list-warranty__text--colortext">В то время как 20%
+                  учеников получили<br />за сочинение 0.</span>
+              </p>
             </li>
-            <li class="section-warranty__item">
-              <p class="section-warranty__text">Text</p>
+            <li class="list-warranty__item">
+              <p class="list-warranty__text typographic-mm">Ты будешь заниматься в своем районе. Мы выберем место
+                проведения занятий после формирования команд.</p>
             </li>
-            <li class="section-warranty__item">
-              <p class="section-warranty__text">Text</p>
+            <li class="list-warranty__item">
+              <p class="list-warranty__text typographic-mm">Команды будут сформированы,<br /> исходя из начального
+                уровня
+                учеников. Мы учитываем особенности каждого ученика.</p>
             </li>
           </ul>
         </div>
